--- a/MPfm/MPfm.iOS/XIB/iPad/SelectPlaylistViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/SelectPlaylistViewController_iPad.xib
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment version="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SelectPlaylistViewController">
             <connections>
+                <outlet property="btnAddNewPlaylist" destination="2Mn-td-9Ex" id="tGF-le-i2C"/>
+                <outlet property="btnCancel" destination="oBE-sk-8mT" id="4gd-Ds-UCT"/>
+                <outlet property="btnSelect" destination="xyD-Ka-aDx" id="BBi-a0-7h5"/>
+                <outlet property="tableView" destination="Ed1-hO-9u7" id="N6O-PO-xCT"/>
                 <outlet property="view" destination="2" id="3"/>
-                <outlet property="viewPanel" destination="E0S-ud-1SI" id="Zkd-sR-x12"/>
+                <outlet property="viewPanel" destination="E0S-ud-1SI" id="Lcs-QU-0k6"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,60 +20,83 @@
             <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" id="E0S-ud-1SI">
-                    <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E0S-ud-1SI">
+                    <rect key="frame" x="34" y="85" width="700" height="854"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="The selected audio files will be added to the following playlist:" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rAp-d8-bk1">
-                            <rect key="frame" x="20" y="49" width="240" height="32"/>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="The selected audio files will be added to the following playlist:" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="728" translatesAutoresizingMaskIntoConstraints="NO" id="rAp-d8-bk1">
+                            <rect key="frame" x="20" y="38" width="728" height="23"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Select a playlist" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mr8-ML-3eM">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Select a playlist" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="240" translatesAutoresizingMaskIntoConstraints="NO" id="mr8-ML-3eM">
                             <rect key="frame" x="20" y="9" width="240" height="32"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Ed1-hO-9u7">
-                            <rect key="frame" x="20" y="161" width="240" height="779"/>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ed1-hO-9u7">
+                            <rect key="frame" x="20" y="127" width="660" height="649"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                             <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </tableView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2Mn-td-9Ex" customClass="MPfmButton">
-                            <rect key="frame" x="20" y="96" width="240" height="44"/>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Mn-td-9Ex" customClass="MPfmButton">
+                            <rect key="frame" x="230" y="69" width="240" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                             <state key="normal" title="Add new playlist">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="actionAddNewPlaylist:" destination="-1" eventType="touchUpInside" id="LdG-Zg-CnI"/>
+                            </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="oBE-sk-8mT" customClass="MPfmButton">
-                            <rect key="frame" x="20" y="960" width="116" height="44"/>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oBE-sk-8mT" customClass="MPfmButton">
+                            <rect key="frame" x="264" y="794" width="116" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                             <state key="normal" title="Cancel">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="actionCancel:" destination="-1" eventType="touchUpInside" id="206-zk-XcR"/>
+                            </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xyD-Ka-aDx" customClass="MPfmButton">
-                            <rect key="frame" x="144" y="960" width="116" height="44"/>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xyD-Ka-aDx" customClass="MPfmButton">
+                            <rect key="frame" x="388" y="794" width="116" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                             <state key="normal" title="Select">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="actionSelect:" destination="-1" eventType="touchUpInside" id="Z0u-pJ-eYG"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.12549019610000001" green="0.15686274510000001" blue="0.18039215689999999" alpha="0.5" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="Ed1-hO-9u7" firstAttribute="top" secondItem="2Mn-td-9Ex" secondAttribute="bottom" constant="18" id="5px-pa-pRw"/>
+                        <constraint firstItem="xyD-Ka-aDx" firstAttribute="top" secondItem="Ed1-hO-9u7" secondAttribute="bottom" constant="18" id="7t4-98-2y1"/>
+                        <constraint firstItem="Ed1-hO-9u7" firstAttribute="leading" secondItem="E0S-ud-1SI" secondAttribute="leading" constant="20" id="9AX-1B-iBR"/>
+                        <constraint firstAttribute="trailing" secondItem="Ed1-hO-9u7" secondAttribute="trailing" constant="20" id="d2f-MR-cXh"/>
+                    </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="E0S-ud-1SI" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="34" id="56c-On-k4K"/>
+                <constraint firstAttribute="bottom" secondItem="E0S-ud-1SI" secondAttribute="bottom" constant="85" id="MV3-uC-MoC"/>
+                <constraint firstAttribute="trailing" secondItem="E0S-ud-1SI" secondAttribute="trailing" constant="34" id="Uqr-52-yeO"/>
+                <constraint firstAttribute="centerY" secondItem="E0S-ud-1SI" secondAttribute="centerY" id="Ypc-zh-f0d"/>
+                <constraint firstItem="E0S-ud-1SI" firstAttribute="top" secondItem="2" secondAttribute="top" constant="85" id="lNl-KJ-lkb"/>
+                <constraint firstAttribute="centerX" secondItem="E0S-ud-1SI" secondAttribute="centerX" id="otY-Cu-UTs"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
         </view>
     </objects>
